# pet-finder

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yaml
src/app/: main.py
tests/: test_main.py
