# [tool.poetry]
# name = "pet-finder"
# version = "0.1.0"
# description = ""
# authors = ["Bruno Ferraz do Amaral <amaralbf@gmail.com>"]
# license = "MIT"

# [tool.poetry.dependencies]
# python = "^3.9"
# Flask = "^2.0.1"

# [tool.poetry.dev-dependencies]
# pytest = "^6.2.5"
# flake8 = "^3.9.2"
# black = "^21.8b0"
# isort = "^5.9.3"
# pre-commit = "^2.15.0"

# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = 'black'
